<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/monogram"
        android:padding="@dimen/_30dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@id/otherInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/_70dp"
            android:layout_height="@dimen/_70dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/baseline_person_24" />

        <LinearLayout
            android:id="@+id/onlineInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="start|center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name"
                style="@style/SimpleText_bold_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                tools:text="@string/name_template" />

            <TextView
                android:id="@+id/phone"
                style="@style/SimpleText_extra_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                tools:text="@string/online_template" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/newPhoto"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <LinearLayout
        android:id="@+id/otherInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:orientation="vertical"
        android:padding="@dimen/_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/accountGroup"
            style="@style/SimpleText_bold_group_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15dp"
            android:text="@string/account_group" />

        <TextView
            android:id="@+id/accountNumber"
            style="@style/SimpleText_extra_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_template" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/gray_transient" />

        <TextView
            android:id="@+id/changeNumberHint"
            style="@style/SimpleText_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15dp"
            android:text="@string/change_number_hint" />

        <TextView
            android:id="@+id/accountNick"
            style="@style/SimpleText_extra_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5dp"
            android:text="@string/nick_template" />

        <TextView
            android:id="@+id/nick"
            style="@style/SimpleText_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/gray_transient" />

        <TextView
            android:id="@+id/aboutYou"
            style="@style/SimpleText_extra_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5dp"
            android:text="@string/about_self" />

        <TextView
            android:id="@+id/aboutSelfHint"
            style="@style/SimpleText_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_self_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/gray_transient" />

        <TextView
            android:id="@+id/settingsGroup"
            style="@style/SimpleText_bold_group_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_marginBottom="@dimen/_15dp"
            android:text="@string/settings" />

        <LinearLayout
            android:id="@+id/notificationsSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15dp"
            android:gravity="start|center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_description"
                android:scaleType="centerCrop"
                android:src="@drawable/notifications" />

            <TextView
                style="@style/SimpleText_extra_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:text="@string/notification" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/confidentialitySettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15dp"
            android:gravity="start|center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_description"
                android:scaleType="centerCrop"
                android:src="@drawable/loc" />

            <TextView
                style="@style/SimpleText_extra_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:text="@string/confidentiality" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dataAndMemorySettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15dp"
            android:gravity="start|center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_description"
                android:scaleType="centerCrop"
                android:src="@drawable/data_and_memory" />

            <TextView
                style="@style/SimpleText_extra_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:text="@string/data_and_memory" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/chatSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15dp"
            android:gravity="start|center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_description"
                android:scaleType="centerCrop"
                android:src="@drawable/chat_settings" />

            <TextView
                style="@style/SimpleText_extra_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:text="@string/chat_settings" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/devicesSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15dp"
            android:gravity="start|center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_description"
                android:scaleType="centerCrop"
                android:src="@drawable/devices" />

            <TextView
                style="@style/SimpleText_extra_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:text="@string/devices" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>