<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/monogram"
    android:layout_width="match_parent"
    android:padding="@dimen/_20dp"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/_70dp"
        android:layout_height="@dimen/_70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/baseline_person_24" />

    <ImageView
        android:id="@+id/theme"
        android:src="@drawable/theme_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_5dp"
        android:contentDescription="@string/img_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/textOwnerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar">

        <TextView
            android:id="@+id/name"
            style="@style/SimpleText_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/name_template" />

        <TextView
            android:id="@+id/phone"
            style="@style/SimpleText_extra_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/phone_template" />
    </LinearLayout>

    <ImageView
        android:id="@+id/contextMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70dp"
        android:layout_marginEnd="@dimen/_5dp"
        android:contentDescription="@string/img_description"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_arrow_drop_down_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme" />
</androidx.constraintlayout.widget.ConstraintLayout>